# riboprof-tools

./: .gitignore  Cargo-230712.toml  Cargo.toml  LICENSE  README.md
data/: NINM011_asites.txt  NINM011_samples.csv  test.sh
src/: bam_suppress_duplicates.rs  fastx_split_main.rs  fp_count_main.rs  fp_framing_main.rs  wiggle_track_main.rs
src/fastx-split/: main.rs
src/fastx_split/: linkers.rs  main.rs  sample.rs  sample_sheet.rs
src/riboprof/: bam_utils.rs  codon_assign.rs  lib.rs  metagene.rs  transcript.rs
src/riboprof/bam_suppress_duplicates/: mod.rs  read_class.rs  read_group.rs  record_class.rs  record_group.rs  stats.rs
src/riboprof/fastx_split/: linkers.rs  mod.rs  sample.rs  sample_sheet.rs
src/riboprof/fp_count/: count.rs  mod.rs
src/riboprof/fp_framing/: framing.rs  mod.rs  stats.rs
src/riboprof/wiggle_track/: genome_count.rs  mod.rs  wiggle.rs  window_count.rs
test/: NINM011_test.fastq  count_test.sh  exprtable.R  framing_test.sh  wiggle_test.sh
