[package]
name = "riboprof-tools"
version = "0.1.0"
authors = ["Nicholas Ingolia <ingolia@berkeley.edu>"]

[dependencies]
bio = { git = "https://github.com/rust-bio/rust-bio" }
rust-htslib = "*"
itertools = "*"
csv = "*"
failure = "*"
clap = "*"
regex = "1"
bio-types = ">=0.3"

[profile.dev]
opt-level = 3

[lib]
name = "riboprof"
path = "src/riboprof/lib.rs"

[[bin]]
name = "fastx-split"
path = "src/fastx_split_main.rs"

[[bin]]
name = "fp-framing"
path = "src/fp_framing_main.rs"
