[package]
name = "riboprof-tools"
version = "0.1.1"
authors = ["Nicholas Ingolia <ingolia@berkeley.edu>"]
edition = "2024"

[dependencies]
bio = ">=3.0, <4"
rust-htslib = ">=1.0, <2"
csv = ">=1.0, <2"
clap = ">= 4, < 5"
regex = ">=1.0, <2"
bio-types = ">=1"
anyhow = ">=1.0, <2"

[profile.dev]
opt-level = 3

[lib]
name = "riboprof"
path = "src/riboprof/lib.rs"

[[bin]]
name = "fastx-split"
path = "src/fastx_split_main.rs"

[[bin]]
name = "fp-framing"
path = "src/fp_framing_main.rs"

[[bin]]
name = "bam-suppress-duplicates"
path = "src/bam_suppress_duplicates.rs"

[[bin]]
name = "fp-count"
path = "src/fp_count_main.rs"

[[bin]]
name = "wiggle-track"
path = "src/wiggle_track_main.rs"
